feat - added image and some info

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>About | Prathmesh Jagtap</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <nav>
+      <div>Prathmesh Jagtap</div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#project">Projects</a></li>
+        <li><a href="#blog">Blog</a></li>
+      </ul>
+    </nav>
+    <section>
+      <div>
+        <img src="images/undraw_feeling_proud_qne1.png" alt="profile image" />
+      </div>
+      <h3>
+        <strong>Hey! I am Prathmesh Jagtap.</strong>
+        <p>A teck geek who loves to code and try out new things</p>
+      </h3>
+    </section>
   </body>
 </html>
