fest - added footer and technology love

--- a/index.html
+++ b/index.html
@@ -24,5 +24,22 @@
         <p>A teck geek who loves to code and try out new things</p>
       </h3>
     </section>
+    <section>
+      <h2>Technology Love</h2>
+      <h4>HTML5 , CSS , JavaScript , React , Mysql , MongoDB , Git , C++ ,C</h4>
+    </section>
+
+    <footer>
+      <h2>To Connect socially</h2>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/prathmesh_jagtap_/">Instagram</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/prathmeshjagtap/">Linkedin</a>
+        </li>
+        <li><a href="https://github.com/prathmeshjagtap">Github</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
