feat - Added projects and blogs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,68 @@
       <h4>HTML5 , CSS , JavaScript , React , Mysql , MongoDB , Git , C++ ,C</h4>
     </section>
 
+    <section>
+      <h2>Projects</h2>
+      <img src="images/undraw_Redesign_feedback_re_jvm0.svg" alt="" />
+      <div>
+        <div>
+          <h1>Amazon-Clone</h1>
+          <p><strong>A clone app of Amazon built using React.</strong></p>
+          <a href="https://clone-f8632.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Amazon-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Expense-Tracker</h1>
+          <p>
+            <strong
+              >This is a Expense -Tracker app created using Javascript to track
+              the Expense</strong
+            >
+          </p>
+          <a href="https://moneytrackerapp.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Expense-Tracker"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Movie Search App</h1>
+          <p><strong>A movie Search App to search different movies</strong></p>
+          <a href="https://prathmeshmoviesearch.netlify.app//"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Movie-Search"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Phir-Hera-Pheri Quiz</h1>
+          <p><strong>CLI Based quiz App</strong></p>
+          <a
+            href="https://repl.it/@prathmeshjagtap/phirHeraPheriQuiz?embed=1&output=1"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://repl.it/@prathmeshjagtap">
+            <button type="button">Source Code</button>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section >
+      <h2>Blogs/h2>
+          <p>
+            “The Six Golden Rules of Writing: Read, read, read, and write, write, write.”
+          </p>
+      
+      
+    </section>
+
     <footer>
       <h2>To Connect socially</h2>
       <ul>
