feat - added blog and project images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section>
       <h2>Projects</h2>
-      <img src="images/undraw_Redesign_feedback_re_jvm0.svg" alt="" />
+      <img src="images/undraw_project_completed_w0oq.png" alt="" />
       <div>
         <div>
           <h1>Amazon-Clone</h1>
@@ -82,13 +82,13 @@
       </div>
     </section>
 
-    <section >
-      <h2>Blogs/h2>
-          <p>
-            “The Six Golden Rules of Writing: Read, read, read, and write, write, write.”
-          </p>
-      
-      
+    <section>
+      <h2>Blogs</h2>
+      <img src="images/undraw_Blog_post_re_fy5x.png" alt="" />
+      <p>
+        “The Six Golden Rules of Writing: Read, read, read, and write, write,
+        write.”
+      </p>
     </section>
 
     <footer>
