feat - added tech blog and general blog pages

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
         “The Six Golden Rules of Writing: Read, read, read, and write, write,
         write.”
       </p>
+      <a href="techblog.html"><button type="button">Tech Blogs</button></a>
+      <a href="generalblog.html"
+        ><button type="button">General Blogs</button></a
+      >
     </section>
 
     <footer>
