style - added some style to index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>About | Prathmesh Jagtap</title>
   </head>
   <body>
-    <nav>
-      <div>Prathmesh Jagtap</div>
-      <ul>
+    <nav class="navigation">
+      <div class="navigation__name">Prathmesh Jagtap</div>
+      <ul class="navigation__list">
         <li><a href="#">Home</a></li>
         <li><a href="#project">Projects</a></li>
         <li><a href="#blog">Blog</a></li>
@@ -17,22 +17,26 @@
     </nav>
     <section>
       <div>
-        <img src="images/undraw_feeling_proud_qne1.png" alt="profile image" />
+        <img
+          class="image"
+          src="images/undraw_feeling_proud_qne1.png"
+          alt="profile image"
+        />
       </div>
-      <h3>
+      <h3 class="heading">
         <strong>Hey! I am Prathmesh Jagtap.</strong>
-        <p>A teck geek who loves to code and try out new things</p>
+        <p>"A teck geek who loves to code and try out new things."</p>
       </h3>
     </section>
-    <section>
+    <section class="tech">
       <h2>Technology Love</h2>
       <h4>HTML5 , CSS , JavaScript , React , Mysql , MongoDB , Git , C++ ,C</h4>
     </section>
 
-    <section>
+    <section class="projects">
       <h2>Projects</h2>
       <img src="images/undraw_project_completed_w0oq.png" alt="" />
-      <div>
+      <div class="projects__container">
         <div>
           <h1>Amazon-Clone</h1>
           <p><strong>A clone app of Amazon built using React.</strong></p>
