style - added some style

--- a/index.html
+++ b/index.html
@@ -48,6 +48,34 @@
           >
         </div>
         <div>
+          <h1>Netflix-Clone</h1>
+          <p>
+            <strong
+              >A clone app of Netflix built using React and Tbmd API</strong
+            >
+          </p>
+          <a href="https://netflix-clone-6f177.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Netflix-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Messenger-Clone</h1>
+          <p>
+            <strong
+              >A clone app of Messenger built using React and Firebase</strong
+            >
+          </p>
+          <a href="https://my-messenger-clone-app.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Messenger-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
           <h1>Expense-Tracker</h1>
           <p>
             <strong
@@ -86,30 +114,38 @@
       </div>
     </section>
 
-    <section>
+    <section class="blogs">
       <h2>Blogs</h2>
       <img src="images/undraw_Blog_post_re_fy5x.png" alt="" />
-      <p>
-        “The Six Golden Rules of Writing: Read, read, read, and write, write,
-        write.”
-      </p>
-      <a href="techblog.html"><button type="button">Tech Blogs</button></a>
-      <a href="generalblog.html"
-        ><button type="button">General Blogs</button></a
-      >
+      <div>
+        <p>
+          “The Six Golden Rules of Writing: Read, read, read, and write, write,
+          write.”
+        </p>
+        <a href="techblog.html"><button type="button">Tech Blogs</button></a>
+        <a href="generalblog.html"
+          ><button type="button">General Blogs</button></a
+        >
+      </div>
     </section>
 
-    <footer>
+    <footer class="footer">
       <h2>To Connect socially</h2>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/prathmesh_jagtap_/">Instagram</a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/prathmeshjagtap/">Linkedin</a>
-        </li>
-        <li><a href="https://github.com/prathmeshjagtap">Github</a></li>
-      </ul>
+      <p>
+        <a href="https://www.instagram.com/prathmesh_jagtap_/">
+          <img alt="Instagram" src="images/174855.png" width="50" height="50" />
+        </a>
+      </p>
+      <p>
+        <a href="https://github.com/prathmeshjagtap">
+          <img alt="Github" src="images/25231.png" width="50" height="50" />
+        </a>
+      </p>
+      <p>
+        <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+          <img alt="Linkedin" src="images/174857.png" width="50" height="50" />
+        </a>
+      </p>
     </footer>
   </body>
 </html>
