feat-Done with projects page, Style-Added styles for project page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="navigation__name">Prathmesh Jagtap</div>
       <ul class="navigation__list">
         <li><a href="#">Home</a></li>
-        <li><a href="#project">Projects</a></li>
+        <li><a href="/projects.html">Projects</a></li>
         <li><a href="#blog">Blog</a></li>
       </ul>
     </nav>
@@ -122,7 +122,7 @@
       </div>-->
     </section>
 
-    <section class="blogs">
+    <section class="blogs" id="blog">
       <h2>Blogs</h2>
       <img src="images/undraw_Blog_post_re_fy5x.png" alt="" />
       <div>
@@ -136,21 +136,23 @@
 
     <footer class="footer">
       <h2>To Connect socially</h2>
-      <p>
+      <ul>
+      <li>
         <a href="https://www.instagram.com/prathmesh_jagtap_/">
           <img alt="Instagram" src="images/174855.png" width="50" height="50" />
         </a>
-      </p>
-      <p>
+      </li>
+      <li>
         <a href="https://github.com/prathmeshjagtap">
           <img alt="Github" src="images/25231.png" width="50" height="50" />
         </a>
-      </p>
-      <p>
+      </li>
+      <li>
         <a href="https://www.linkedin.com/in/prathmeshjagtap/">
           <img alt="Linkedin" src="images/174857.png" width="50" height="50" />
         </a>
-      </p>
+      </li>
+    </ul>
     </footer>
   </body>
 </html>
