--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,130 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Projects</title>
   </head>
   <body>
-    <h1>Projects Page</h1>
+    <nav class="navigation">
+      <div class="navigation__name">Prathmesh Jagtap</div>
+      <ul class="navigation__list">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="./blogs.html">Blog</a></li>
+      </ul>
+    </nav>
+
+    <section class="projects">
+      <h2>Projects</h2>
+      <img src="images/undraw_project_completed_w0oq.png" alt="" />
+      <div class="projects__container">
+        <div>
+          <h1>Amazon-Clone</h1>
+          <p><strong>A clone app of Amazon built using React.</strong></p>
+          <a href="https://clone-f8632.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Amazon-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Netflix-Clone</h1>
+          <p>
+            <strong
+              >A clone app of Netflix built using React and Tbmd API</strong
+            >
+          </p>
+          <a href="https://netflix-clone-6f177.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Netflix-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+
+        <div>
+          <h1>Messenger-Clone</h1>
+          <p>
+            <strong
+              >A clone app of Messenger built using React and Firebase</strong
+            >
+          </p>
+          <a href="https://my-messenger-clone-app.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Messenger-Clone"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Expense-Tracker</h1>
+          <p>
+            <strong
+              >This is a Expense -Tracker app created using Javascript to track
+              the Expense</strong
+            >
+          </p>
+          <a href="https://moneytrackerapp.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Expense-Tracker"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Movie Search App</h1>
+          <p><strong>A movie Search App to search different movies</strong></p>
+          <a href="https://prathmeshmoviesearch.netlify.app//"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Movie-Search"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Phir-Hera-Pheri Quiz</h1>
+          <p><strong>CLI Based quiz App</strong></p>
+          <a
+            href="https://repl.it/@prathmeshjagtap/phirHeraPheriQuiz?embed=1&output=1"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://repl.it/@prathmeshjagtap">
+            <button type="button">Source Code</button>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer__projects">
+      <h2>To Connect socially</h2>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/prathmesh_jagtap_/">
+            <img
+              alt="Instagram"
+              src="images/174855.png"
+              width="50"
+              height="50"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/prathmeshjagtap">
+            <img alt="Github" src="images/25231.png" width="50" height="50" />
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+            <img
+              alt="Linkedin"
+              src="images/174857.png"
+              width="50"
+              height="50"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
