feat- Added only one page of blog and done some changes

--- a/blogs.html
+++ b/blogs.html
@@ -3,9 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Blogs</title>
   </head>
   <body>
-    <h1>Blogs Page</h1>
+    <nav class="navigation">
+      <div class="navigation__name">Prathmesh Jagtap</div>
+      <ul class="navigation__list">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="./blogs.html">Blog</a></li>
+      </ul>
+    </nav>
+    <section class="blogs" style="background-color: white !important">
+      <h2>Blogs</h2>
+      <img src="images/undraw_Blog_post_re_fy5x.png" alt="" />
+      <div>
+        <p>“Blogging is a conversation, not a code.”</p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <h2>To Connect socially</h2>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/prathmesh_jagtap_/">
+            <img
+              alt="Instagram"
+              src="images/174855.png"
+              width="50"
+              height="50"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/prathmeshjagtap">
+            <img alt="Github" src="images/25231.png" width="50" height="50" />
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+            <img
+              alt="Linkedin"
+              src="images/174857.png"
+              width="50"
+              height="50"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
