feat-added projects

--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,66 @@
             ><button type="button">Github</button></a
           >
         </div>
+        <div>
+          <h1>Wanderlust</h1>
+          <p>
+            <strong></strong>
+              A react app to look for info about famous places in
+              countries</strong
+            >
+          </p>
+          <a href="https://wanderlust2021.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/wanderlust"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Flag-Interpretor</h1>
+          <p>
+            <strong>
+              Flag Interpretor is a place to search Flag Emojis meaning.</strong
+            >
+          </p>
+          <a href="https://flag-pedia.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Falg-Interpretor"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Pirate-Speak</h1>
+          <p>
+            <strong>
+              
+              Convert from English to Pirate speak. Shiver me timbers! I be needin' t' send 'em all to Davy Jones' locker. Arrrrr! Anyway go ahead and translate and have some fun!</strong
+            >
+          </p>
+          <a href="https://piratetranslate.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Pirate-Speak"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Minion-Talk</h1>
+          <p>
+            <strong>
+              
+              About
+A fun translation app made in Javascript to convert Plain English to minions Language</strong
+            >
+          </p>
+          <a href="https://minions-translate.netlify.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/banana-speak"
+            ><button type="button">Github</button></a
+          >
+        </div>
 
         <div>
           <h1>Messenger-Clone</h1>
