feat- changed the headline

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <h3 class="heading">
         <strong>Hey! I am Prathmesh Jagtap.</strong>
-        <p>"A teck geek who loves to code and try out new things."</p>
+        <p>"Aspiring Full stack Developer who loves to code and try out new things."</p>
       </h3>
     </section>
     <section class="tech">
