feat- done some link  changes

--- a/projects.html
+++ b/projects.html
@@ -155,6 +155,17 @@ A fun translation app made in Javascript to convert Plain English to minions Lan
             <button type="button">Source Code</button>
           </a>
         </div>
+        <div>
+          <h1>How well Do you Know Me </h1>
+          <p><strong>CLI Based quiz App </strong></p>
+          <a
+            href="https://repl.it/@prathmeshjagtap/endGame?embed=1&output=1#index.js"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://repl.it/@prathmeshjagtap">
+            <button type="button">Source Code</button>
+          </a>
+        </div>
       </div>
     </section>
 
