feat - changed some features of linlked and cli apps

--- a/blogs.html
+++ b/blogs.html
@@ -108,7 +108,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+          <a href="https://www.linkedin.com/in/prathmeshjagtap">
             <img
               alt="Linkedin"
               src="images/174857.png"
