--- a/projects.html
+++ b/projects.html
@@ -151,8 +151,8 @@ A fun translation app made in Javascript to convert Plain English to minions Lan
             href="https://repl.it/@prathmeshjagtap/phirHeraPheriQuiz?embed=1&output=1"
             ><button type="button">View Project</button></a
           >
-          <a href="https://repl.it/@prathmeshjagtap">
-            <button type="button">Source Code</button>
+          <a href="https://github.com/prathmeshjagtap/Phir-Hera-Pheri-Quiz">
+            <button type="button">Github</button>
           </a>
         </div>
         <div>
@@ -162,8 +162,8 @@ A fun translation app made in Javascript to convert Plain English to minions Lan
             href="https://repl.it/@prathmeshjagtap/endGame?embed=1&output=1#index.js"
             ><button type="button">View Project</button></a
           >
-          <a href="https://repl.it/@prathmeshjagtap">
-            <button type="button">Source Code</button>
+          <a href="https://github.com/prathmeshjagtap/Do-you-Know-me">
+            <button type="button">Github</button>
           </a>
         </div>
       </div>
@@ -188,7 +188,7 @@ A fun translation app made in Javascript to convert Plain English to minions Lan
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+          <a href="https://www.linkedin.com/in/prathmeshjagtap">
             <img
               alt="Linkedin"
               src="images/174857.png"
