--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/prathmeshjagtap/">
+        <a href="https://www.linkedin.com/in/prathmeshjagtap">
           <img alt="Linkedin" src="images/174857.png" width="50" height="50" />
         </a>
       </li>
