feat- added some projects

--- a/projects.html
+++ b/projects.html
@@ -145,6 +145,26 @@ A fun translation app made in Javascript to convert Plain English to minions Lan
           >
         </div>
         <div>
+          <h1>Firegram</h1>
+          <p><strong>A View Photo app build using React and Firebase</strong></p>
+          <a href="https://firegram-77a6d.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/firegram"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
+          <h1>Todo App</h1>
+          <p><strong>Simple Todo  app build using React and Firebase</strong></p>
+          <a href="https://todo-b2ee5.web.app/"
+            ><button type="button">View Project</button></a
+          >
+          <a href="https://github.com/prathmeshjagtap/Todo"
+            ><button type="button">Github</button></a
+          >
+        </div>
+        <div>
           <h1>Phir-Hera-Pheri Quiz</h1>
           <p><strong>CLI Based quiz App</strong></p>
           <a
