--- a/blogs.html
+++ b/blogs.html
@@ -24,11 +24,23 @@
     </section>
     <section>
       <ul class="blogs__container">
-        <li class="blogs__containerOdd">
+        <!-- <li class="blogs__containerOdd">
           <h1>Dummy blog How was React Formed</h1>
           <small>8 December, 2020</small>
           <p>This is the Dummy blogs about how was react formed</p>
           <a href="/demoBlog.html"><button type="button">Read More</button></a>
+        </li> -->
+        <li class="blogs__containerOdd">
+          <h1>Building Movie Search with React</h1>
+          <small>6 August, 2021</small>
+          <p>
+            We are building a basic Movie search by using React and movie
+            database API
+          </p>
+          <a
+            href="https://prathmesh.hashnode.dev/build-a-movie-search-app-in-react"
+            ><button type="button">Read More</button></a
+          >
         </li>
         <hr />
         <h1>Other General Blogs</h1>
