refactor-added target="_blank" to all project links

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div>
           <h1>Amazon-Clone</h1>
           <p><strong>A clone app of Amazon built using React.</strong></p>
-          <a href="https://clone-f8632.web.app/"
+          <a href="https://clone-f8632.web.app/" target="_blank"
             ><button type="button">View Project</button></a
           >
-          <a href="https://github.com/prathmeshjagtap/Amazon-Clone"
+          <a href="https://github.com/prathmeshjagtap/Amazon-Clone" target="_blank"
             ><button type="button">Github</button></a
           >
         </div>
@@ -54,15 +54,15 @@
               >A clone app of Netflix built using React and Tbmd API</strong
             >
           </p>
-          <a href="https://netflix-clone-6f177.web.app/"
+          <a href="https://netflix-clone-6f177.web.app/" target="_blank"
             ><button type="button">View Project</button></a
           >
-          <a href="https://github.com/prathmeshjagtap/Netflix-Clone"
+          <a href="https://github.com/prathmeshjagtap/Netflix-Clone" target="_blank"
             ><button type="button">Github</button></a
           >
         </div>
         
-        <a  href="/projects.html"
+        <a  href="/projects.html" 
             ><button class="projects_all" type="button">See All Projects</button></a
           >
         </section>
@@ -72,7 +72,7 @@
       <img src="images/undraw_Blog_post_re_fy5x.png" alt="" />
       <div>
         <p>“Blogging is a conversation, not a code.”</p>
-        <a href="/blogs.html"><button type="button">View Blogs</button></a>
+        <a href="/blogs.html"><button type="button" >View Blogs</button></a>
         
       </div> 
     </section>
@@ -81,17 +81,17 @@
       <h2>To Connect socially</h2>
       <ul>
       <li>
-        <a href="https://www.instagram.com/prathmesh_jagtap_/">
+        <a href="https://www.instagram.com/prathmesh_jagtap_/" target="_blank">
           <img alt="Instagram" src="images/174855.png" width="50" height="50" />
         </a>
       </li>
       <li>
-        <a href="https://github.com/prathmeshjagtap">
+        <a href="https://github.com/prathmeshjagtap" target="_blank">
           <img alt="Github" src="images/25231.png" width="50" height="50" />
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/prathmeshjagtap">
+        <a href="https://www.linkedin.com/in/prathmeshjagtap" target="_blank">
           <img alt="Linkedin" src="images/174857.png" width="50" height="50" />
         </a>
       </li>
